Able to configure xsite inside single cluster #635

--- a/deploy/operator-install.yaml
+++ b/deploy/operator-install.yaml
@@ -899,15 +899,13 @@ spec:
                     local:
                       properties:
                         expose:
-                          description: ExposeSpec describe how Infinispan will be
-                            exposed externally
+                          description: CrossSiteExposeSpec describe how Infinispan
+                            Cross-Site service will be exposed externally
                           properties:
                             annotations:
                               additionalProperties:
                                 type: string
                               type: object
-                            host:
-                              type: string
                             nodePort:
                               format: int32
                               type: integer
@@ -917,7 +915,7 @@ spec:
                               enum:
                               - NodePort
                               - LoadBalancer
-                              - Route
+                              - ClusterIP
                               type: string
                           required:
                           - type
