--- a/deploy/crds/infinispan.org_infinispans_crd.yaml
+++ b/deploy/crds/infinispan.org_infinispans_crd.yaml
@@ -718,15 +718,13 @@ spec:
                     local:
                       properties:
                         expose:
-                          description: ExposeSpec describe how Infinispan will be
-                            exposed externally
+                          description: CrossSiteExposeSpec describe how Infinispan
+                            Cross-Site service will be exposed externally
                           properties:
                             annotations:
                               additionalProperties:
                                 type: string
                               type: object
-                            host:
-                              type: string
                             nodePort:
                               format: int32
                               type: integer
@@ -736,7 +734,7 @@ spec:
                               enum:
                               - NodePort
                               - LoadBalancer
-                              - Route
+                              - ClusterIP
                               type: string
                           required:
                           - type
