Disabling tls via config #617

--- a/deploy/crds/infinispan.org_infinispans_crd.yaml
+++ b/deploy/crds/infinispan.org_infinispans_crd.yaml
@@ -690,6 +690,7 @@ spec:
                       - service
                       - Secret
                       - secret
+                      - None
                       type: string
                   type: object
                 endpointSecretName:
@@ -817,6 +818,7 @@ spec:
                       - service
                       - Secret
                       - secret
+                      - None
                       type: string
                   type: object
                 endpointSecretName:
