--- a/deploy/operator-install.yaml
+++ b/deploy/operator-install.yaml
@@ -873,6 +873,7 @@ spec:
                       - service
                       - Secret
                       - secret
+                      - None
                       type: string
                   type: object
                 endpointSecretName:
@@ -1000,6 +1001,7 @@ spec:
                       - service
                       - Secret
                       - secret
+                      - None
                       type: string
                   type: object
                 endpointSecretName:
