--- a/deploy/crds/infinispan.org_infinispans_crd.yaml
+++ b/deploy/crds/infinispan.org_infinispans_crd.yaml
@@ -682,6 +682,7 @@ spec:
                       - service
                       - Secret
                       - secret
+                      - None
                       type: string
                   type: object
                 endpointSecretName:
@@ -802,6 +803,7 @@ spec:
                       - service
                       - Secret
                       - secret
+                      - None
                       type: string
                   type: object
                 endpointSecretName:
