--- a/deploy/operator-install.yaml
+++ b/deploy/operator-install.yaml
@@ -819,6 +819,7 @@ spec:
                       - service
                       - Secret
                       - secret
+                      - None
                       type: string
                   type: object
                 endpointSecretName:
@@ -939,6 +940,7 @@ spec:
                       - service
                       - Secret
                       - secret
+                      - None
                       type: string
                   type: object
                 endpointSecretName:
