--- a/deploy/role.yaml
+++ b/deploy/role.yaml
@@ -57,6 +57,7 @@ rules:
   - list
   - watch
   - create
+  - delete
 - apiGroups:
   - networking.k8s.io
   resources:
@@ -66,6 +67,7 @@ rules:
   - list
   - watch
   - create
+  - delete
 - apiGroups:
   - monitoring.coreos.com
   resources:
@@ -94,4 +96,4 @@ rules:
   - watch
   - create
   - update
-  - delete
+  - patch
