--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,12 @@ os: linux
 
 before_install:
   - |
+    set -e
     git fetch origin $TRAVIS_BRANCH
     git diff --name-only FETCH_HEAD | grep -qvE '(\.md$)|(^(doc|documentation|manual|olm|ci|deploy/cr/|deploy/olm-catalog|build/cekit|build/jenkins|build/minikube|test-integration|.gitignore))/' || {
       echo "Only docs, manual steps, test-integration,CI and OLM files were updated, stopping build process."
-      exit
+      travis_terminate 0
+      exit 1
     }
 
 jobs:
