Able to setup XSite for different namespaces and cluster name fixes #702

--- a/deploy/operator-install.yaml
+++ b/deploy/operator-install.yaml
@@ -932,9 +932,13 @@ spec:
                     locations:
                       items:
                         properties:
+                          clusterName:
+                            type: string
                           host:
                             type: string
                           name:
+                            type: string
+                          namespace:
                             type: string
                           port:
                             format: int32
