--- a/deploy/crds/infinispan.org_infinispans_crd.yaml
+++ b/deploy/crds/infinispan.org_infinispans_crd.yaml
@@ -749,9 +749,13 @@ spec:
                     locations:
                       items:
                         properties:
+                          clusterName:
+                            type: string
                           host:
                             type: string
                           name:
+                            type: string
+                          namespace:
                             type: string
                           port:
                             format: int32
