--- a/deploy/operator-install.yaml
+++ b/deploy/operator-install.yaml
@@ -849,6 +849,14 @@ spec:
               properties:
                 categories:
                   additionalProperties:
+                    description: LoggingLevelType describe the logging level for selected
+                      category
+                    enum:
+                    - trace
+                    - debug
+                    - info
+                    - warn
+                    - error
                     type: string
                   type: object
               type: object
