--- a/deploy/olm-catalog/infinispan-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/infinispan-operator.clusterserviceversion.yaml
@@ -65,10 +65,11 @@ metadata:
     categories: Database
     repository: https://github.com/infinispan/infinispan-operator
     description: Create and manage Infinispan clusters.
-    containerImage: quay.io/infinispan/operator:2.1.0.Dev06
+    containerImage: quay.io/infinispan/operator:2.1.0.Final
+    createdAt: 2021-01-26T09:00:00Z
     support: Infinispan
     certified: "false"
-  name: infinispan-operator.v2.1.1
+  name: infinispan-operator.v2.1.2
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -126,8 +127,8 @@ spec:
                       - name: OPERATOR_NAME
                         value: infinispan-operator
                       - name: RELATED_IMAGE_OPENJDK
-                        value: quay.io/infinispan/server:12.0.0.Dev06
-                    image: quay.io/infinispan/operator:2.1.0.Dev06
+                        value: quay.io/infinispan/server:12.0.0.Final
+                    image: quay.io/infinispan/operator:2.1.0.Final
                     imagePullPolicy: Always
                     name: infinispan-operator
                     ports:
@@ -266,8 +267,8 @@ spec:
       type: AllNamespaces
   maturity: alpha
   provider: {name: Infinispan}
-  replaces: infinispan-operator.v2.1.0
-  version: 2.1.1
+  replaces: infinispan-operator.v2.1.1
+  version: 2.1.2
   keywords:
     - infinispan
     - key value
@@ -280,7 +281,7 @@ spec:
       email: infinispan-dev@lists.jboss.org
   relatedImages:
     - name: infinispan-server
-      image: quay.io/infinispan/server:12.0.0.Dev06
+      image: quay.io/infinispan/server:12.0.0.Final
   labels:
     operated-by: infinispan-operator
   selector:
