ISPN-12702 Create Grafana dashboards #407

--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,7 @@ jobs:
         - docker
       env:
         - KIND_VERSION=v0.9.0
+        - OSDK_FORCE_RUN_MODE=local
       before_script:
         - source ./build/travis/configure-travis-ci.sh
         - go mod vendor
@@ -55,6 +56,7 @@ jobs:
         - docker
       env:
         - KIND_VERSION=v0.9.0
+        - OSDK_FORCE_RUN_MODE=local
       before_script:
         - source ./build/travis/configure-travis-ci.sh
         - go mod vendor
