--- a/deploy/olm-catalog/infinispan-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/infinispan-operator.clusterserviceversion.yaml
@@ -199,9 +199,16 @@ spec:
                 - apps
               resources:
                 - replicasets
+              verbs:
+                - get
+            - apiGroups:
+                - apps
+              resources:
                 - deployments
               verbs:
                 - get
+                - list
+                - watch
             - apiGroups:
                 - batch
               resources:
@@ -278,6 +285,16 @@ spec:
                 - create
                 - update
                 - patch
+            - apiGroups:
+                - integreatly.org
+              resources:
+                - grafanadashboards
+              verbs:
+                - get
+                - list
+                - watch
+                - create
+                - delete
           serviceAccountName: infinispan-operator
       clusterPermissions:
         - serviceAccountName: infinispan-operator
