--- a/deploy/operator-install.yaml
+++ b/deploy/operator-install.yaml
@@ -52,9 +52,16 @@ rules:
   - apps
   resources:
   - replicasets
+  verbs:
+  - get
+- apiGroups:
+  - apps
+  resources:
   - deployments
   verbs:
   - get
+  - list
+  - watch
 - apiGroups:
   - batch
   resources:
@@ -131,6 +138,16 @@ rules:
   - create
   - update
   - patch
+- apiGroups:
+    - integreatly.org
+  resources:
+    - grafanadashboards
+  verbs:
+    - get
+    - list
+    - watch
+    - create
+    - delete
 
 ---
 
