Use xsite://host:port URI configuration for static cross-site config fixes #762

--- a/deploy/cr/xsite/static-internal/xsite_b.yaml
+++ b/deploy/cr/xsite/static-internal/xsite_b.yaml
@@ -15,6 +15,6 @@ spec:
           type: ClusterIP
       locations:
         - name: SiteA
-          host: example-clustera-site
+          url: infinispan+xsite://example-clustera-site
         - name: SiteB
-          host: example-clusterb-site
+          url: infinispan+xsite://example-clusterb-site
