--- a/documentation/asciidoc/topics/yaml/cr_backup_site_manual.yaml
+++ b/documentation/asciidoc/topics/yaml/cr_backup_site_manual.yaml
@@ -9,12 +9,10 @@ spec:
           type: LoadBalancer <3>
       locations: <4>
       - name: LON <5>
-        host: infinispan-lon.myhost.com <6>
-        port: 7900 <7>
+        url: xsite://infinispan-lon.myhost.com:7900 <6>
       - name: NYC
-        host: infinispan-nyc.myhost.com
-        port: 7900
+        url: xsite://infinispan-nyc.myhost.com:7900
   logging:
     categories:
-      org.jgroups.protocols.TCP: error <8>
-      org.jgroups.protocols.relay.RELAY2: fatal <9>
+      org.jgroups.protocols.TCP: error <7>
+      org.jgroups.protocols.relay.RELAY2: fatal <8>
