Update Backup/Restore resource names
The cache-configs and script names were renamed after Dev06, therefore
the CRDs should be updated to reflect this.

Transformation logic has been added for the Backup/Restore CR specs to
ensure backwards-compatibility upstream, however this should be removed before the next downstream release.

Lock.Owners is no longer set explicitly as underlying issue fixed in
Infinispan.

--- a/deploy/crds/infinispan.org_backups_crd.yaml
+++ b/deploy/crds/infinispan.org_backups_crd.yaml
@@ -49,6 +49,8 @@ spec:
             resources:
               properties:
                 cacheConfigs:
+                  description: Deprecated and to be removed on subsequent release.
+                    Use .Templates instead.
                   items:
                     type: string
                   type: array
@@ -65,6 +67,16 @@ spec:
                     type: string
                   type: array
                 scripts:
+                  description: Deprecated and to be removed on subsequent release.
+                    Use .Tasks instead.
+                  items:
+                    type: string
+                  type: array
+                tasks:
+                  items:
+                    type: string
+                  type: array
+                templates:
                   items:
                     type: string
                   type: array
