--- a/deploy/crds/infinispan.org_restores_crd.yaml
+++ b/deploy/crds/infinispan.org_restores_crd.yaml
@@ -51,6 +51,8 @@ spec:
             resources:
               properties:
                 cacheConfigs:
+                  description: Deprecated and to be removed on subsequent release.
+                    Use .Templates instead.
                   items:
                     type: string
                   type: array
@@ -67,6 +69,16 @@ spec:
                     type: string
                   type: array
                 scripts:
+                  description: Deprecated and to be removed on subsequent release.
+                    Use .Tasks instead.
+                  items:
+                    type: string
+                  type: array
+                tasks:
+                  items:
+                    type: string
+                  type: array
+                templates:
                   items:
                     type: string
                   type: array
