--- a/deploy/operator-install.yaml
+++ b/deploy/operator-install.yaml
@@ -1214,6 +1214,8 @@ spec:
             resources:
               properties:
                 cacheConfigs:
+                  description: Deprecated and to be removed on subsequent release.
+                    Use .Templates instead.
                   items:
                     type: string
                   type: array
@@ -1230,6 +1232,16 @@ spec:
                     type: string
                   type: array
                 scripts:
+                  description: Deprecated and to be removed on subsequent release.
+                    Use .Tasks instead.
+                  items:
+                    type: string
+                  type: array
+                tasks:
+                  items:
+                    type: string
+                  type: array
+                templates:
                   items:
                     type: string
                   type: array
@@ -1322,6 +1334,8 @@ spec:
             resources:
               properties:
                 cacheConfigs:
+                  description: Deprecated and to be removed on subsequent release.
+                    Use .Templates instead.
                   items:
                     type: string
                   type: array
@@ -1338,6 +1352,16 @@ spec:
                     type: string
                   type: array
                 scripts:
+                  description: Deprecated and to be removed on subsequent release.
+                    Use .Tasks instead.
+                  items:
+                    type: string
+                  type: array
+                tasks:
+                  items:
+                    type: string
+                  type: array
+                templates:
                   items:
                     type: string
                   type: array
