--- a/deploy/crds/infinispan.org_infinispans_crd.yaml
+++ b/deploy/crds/infinispan.org_infinispans_crd.yaml
@@ -683,6 +683,8 @@ spec:
             security:
               description: InfinispanSecurity info for the user application connection
               properties:
+                endpointAuthentication:
+                  type: boolean
                 endpointEncryption:
                   description: EndpointEncryption configuration
                   properties:
@@ -839,6 +841,8 @@ spec:
             security:
               description: InfinispanSecurity info for the user application connection
               properties:
+                endpointAuthentication:
+                  type: boolean
                 endpointEncryption:
                   description: EndpointEncryption configuration
                   properties:
