--- a/deploy/operator-install.yaml
+++ b/deploy/operator-install.yaml
@@ -866,6 +866,8 @@ spec:
             security:
               description: InfinispanSecurity info for the user application connection
               properties:
+                endpointAuthentication:
+                  type: boolean
                 endpointEncryption:
                   description: EndpointEncryption configuration
                   properties:
@@ -1003,6 +1005,8 @@ spec:
             security:
               description: InfinispanSecurity info for the user application connection
               properties:
+                endpointAuthentication:
+                  type: boolean
                 endpointEncryption:
                   description: EndpointEncryption configuration
                   properties:
