adding in roles for grafana

--- a/deploy/operator-install.yaml
+++ b/deploy/operator-install.yaml
@@ -111,6 +111,16 @@ rules:
   - create
   - update
   - patch
+- apiGroups:
+    - integreatly.org
+  resources:
+    - grafanadashboards
+  verbs:
+    - get
+    - list
+    - watch
+    - create
+    - delete
 
 ---
 
