--- a/documentation/asciidoc/topics/yaml/cr_minimal.yaml
+++ b/documentation/asciidoc/topics/yaml/cr_minimal.yaml
@@ -1,6 +1,6 @@
-apiVersion: infinispan.org/v1
-kind: Infinispan
+apiVersion: infinispan.org/v1 <1>
+kind: Infinispan <2>
 metadata:
-  name: {example_crd_name}
+  name: {example_crd_name} <3>
 spec:
-  replicas: 2
+  replicas: 2 <4>
