--- a/deploy/crds/infinispan.org_infinispans_crd.yaml
+++ b/deploy/crds/infinispan.org_infinispans_crd.yaml
@@ -735,11 +735,16 @@ spec:
                     locations:
                       items:
                         properties:
+                          clusterName:
+                            type: string
                           name:
+                            type: string
+                          namespace:
                             type: string
                           secretName:
                             type: string
                           url:
+                            pattern: ^(minikube|openshift):\/\/(([a-z0-9]|[a-z0-9][a-z0-9\-]*[a-z0-9])\.)*([a-z0-9]|[a-z0-9][a-z0-9\-]*[a-z0-9])(:[0-9]+)?$
                             type: string
                         required:
                         - name
