Specify StorageClassName for PVC #388

--- a/deploy/crds/infinispan.org_infinispans_crd.yaml
+++ b/deploy/crds/infinispan.org_infinispans_crd.yaml
@@ -698,6 +698,8 @@ spec:
                   properties:
                     storage:
                       type: string
+                    storageClassName:
+                      type: string
                   type: object
                 replicationFactor:
                   format: int32
