--- a/deploy/clusterrole.yaml
+++ b/deploy/clusterrole.yaml
@@ -12,6 +12,13 @@ rules:
   - list
   - watch
 - apiGroups:
+  - storage.k8s.io
+  resources:
+  - storageclasses
+  verbs:
+  - get
+  - watch
+- apiGroups:
   - apiextensions.k8s.io
   resources:
   - customresourcedefinitions
