--- a/deploy/operator-install.yaml
+++ b/deploy/operator-install.yaml
@@ -95,6 +95,13 @@ rules:
   - list
   - watch
 - apiGroups:
+  - storage.k8s.io
+  resources:
+  - storageclasses
+  verbs:
+  - get
+  - watch
+- apiGroups:
   - apiextensions.k8s.io
   resources:
   - customresourcedefinitions
@@ -834,6 +841,8 @@ spec:
                     specific for service
                   properties:
                     storage:
+                      type: string
+                    storageClassName:
                       type: string
                   type: object
                 replicationFactor:
