--- a/deploy/role.yaml
+++ b/deploy/role.yaml
@@ -1,9 +1,9 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: infinispan-operator
   labels:
     name: infinispan-operator
+  name: infinispan-operator
 rules:
 - apiGroups:
   - ""
@@ -25,6 +25,12 @@ rules:
 - apiGroups:
   - ""
   resources:
+    - pods/log
+  verbs:
+    - get
+- apiGroups:
+  - ""
+  resources:
   - pods/exec
   verbs:
   - create
@@ -35,6 +41,17 @@ rules:
   - deployments
   verbs:
   - get
+- apiGroups:
+  - batch
+  resources:
+  - jobs
+  verbs:
+  - get
+  - list
+  - watch
+  - create
+  - update
+  - delete
 - apiGroups:
   - apps
   resources:
@@ -90,6 +107,9 @@ rules:
   - restores
   - restores/status
   - restores/finalizers
+  - batches
+  - batches/status
+  - batches/finalizers
   verbs:
   - get
   - list
