Allow user to run custom libs #609

--- a/deploy/crds/infinispan.org_infinispans_crd.yaml
+++ b/deploy/crds/infinispan.org_infinispans_crd.yaml
@@ -632,6 +632,9 @@ spec:
               properties:
                 cpu:
                   type: string
+                customLibrariesPVName:
+                  description: Name of the persistent volumes with custom libraries
+                  type: string
                 extraJvmOpts:
                   type: string
                 memory:
