--- a/deploy/operator-install.yaml
+++ b/deploy/operator-install.yaml
@@ -815,6 +815,9 @@ spec:
               properties:
                 cpu:
                   type: string
+                customLibrariesPVName:
+                  description: Name of the persistent volumes with custom libraries
+                  type: string
                 extraJvmOpts:
                   type: string
                 memory:
@@ -1229,6 +1232,9 @@ spec:
               properties:
                 cpu:
                   type: string
+                customLibrariesPVName:
+                  description: Name of the persistent volumes with custom libraries
+                  type: string
                 extraJvmOpts:
                   type: string
                 memory:
@@ -1348,6 +1354,9 @@ spec:
                 container
               properties:
                 cpu:
+                  type: string
+                customLibrariesPVName:
+                  description: Name of the persistent volumes with custom libraries
                   type: string
                 extraJvmOpts:
                   type: string
