--- a/deploy/crds/infinispan.org_infinispans_crd.yaml
+++ b/deploy/crds/infinispan.org_infinispans_crd.yaml
@@ -632,12 +632,16 @@ spec:
               properties:
                 cpu:
                   type: string
-                customLibrariesPVName:
-                  description: Name of the persistent volumes with custom libraries
-                  type: string
                 extraJvmOpts:
                   type: string
                 memory:
+                  type: string
+              type: object
+            dependencies:
+              description: External dependencies needed by the Infinispan cluster
+              properties:
+                customLibrariesPVName:
+                  description: Name of the persistent volumes with custom libraries
                   type: string
               type: object
             expose:
